# Singleton

./: CMakeLists.txt  LICENSE  README.md  Singleton.cc  Singleton.h  Singleton_priv.h
tests/: CMakeLists.txt  testSingleton.cc
